# Path-Tracer

./: CMakeLists.txt  README.md
lib/lodepng/: lodepng.cpp  lodepng.h
lib/rand48/: erand48.h  rand48.c
src/: aabbox.h  camera.cpp  camera.h  kdtree.cpp  kdtree.h  main.cpp  material.cpp  material.h  objects.cpp  objects.h  ray.h  renderer.cpp  renderer.h  scene.cpp  scene.h  texture.cpp  texture.h  triangle.h  vector.h
